new bonus confirmation methods + roles
