# backend/src/routes/report-routes.js
@@ -35,25 +35,51 @@ router.put("/:id/submit",
     //#swagger.description = 'Submit Report'
     //#swagger.summary = 'Submit Report'
     // #swagger.tags = ['Reports']
-    checkAuthorization(), ReportApi.submitReport)
+    checkAuthorization(), ReportApi.submitReportByCEO)
 
 router.put("/:id/unSubmit",
     //#swagger.description = 'Unsubmit Report'
     //#swagger.summary = 'Unsubmit Report'
     // #swagger.tags = ['Reports']
-    checkAuthorization(), ReportApi.unSubmitReport)
+    checkAuthorization(), ReportApi.unSubmitReportByCEO)
 
 router.put("/submit",
     //#swagger.description = 'Submit all Reports'
     //#swagger.summary = 'Submit all Reports'
     // #swagger.tags = ['Reports']
-    checkAuthorization(), ReportApi.submitAllReports)
+    checkAuthorization(), ReportApi.submitAllReportsByCEO)
+
+router.put("/submit/confirmationArrayReverse",
+    //#swagger.description = 'Reverse array'
+    //#swagger.summary = 'Reverse array'
+    // #swagger.tags = ['Reports']
+    /* #swagger.parameters['Report'] = {
+   in: 'body',
+   description: 'Reverse array',
+   type: 'object',
+   required: true,
+   schema: { $ref: '#/definitions/reverseArray' }
+ } */
+    checkAuthorization(), ReportApi.confirmationReverseWithIdsArrayByCEO)
+
+router.put("/submit/confirmationPairCEO",
+    //#swagger.description = 'confirmationPairCEO'
+    //#swagger.summary = 'confirmationPairCEO'
+    // #swagger.tags = ['confirmationPairCEO']
+    /* #swagger.parameters['confirmationPairCEO'] = {
+   in: 'body',
+   description: 'confirmationPairCEO',
+   type: 'object',
+   required: true,
+   schema: { $ref: '#/definitions/confirmationPairCEO' }
+ } */
+    checkAuthorization(), ReportApi.confirmationPairsArrayByCEO)
 
 router.put("/unSubmit",
     //#swagger.description = 'Unsubmit all Reports'
     //#swagger.summary = 'Unsubmit all Reports'
     // #swagger.tags = ['Reports']
-    checkAuthorization(), ReportApi.unSubmitAllReports)
+    checkAuthorization(), ReportApi.unSubmitAllReportsByCEO)
 
 router.delete("/",
     //#swagger.description = 'Delete all reports'
